<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SUPERPLAYER</string>
 <string name="widgetID" translatable="false">5482625</string>
    <string name="app_metrica_on_start_event" translatable="false">
   {\"wid\":123,
   \"wname\":\"MyFirstWidget\",
   \"templates\":\"url,blog,twitter\",
   \"firstTemplate\":\"url\",
   \"pid\":1}
    </string>
    <string name="template_version" translatable="false">1.0</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by&#8230;</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_name_desc">Name (desc)</string>
    <string name="sortby_artist_name">Artist name</string>
    <string name="sortby_artist_name_desc">Artist name (desc)</string>
    <string name="sortby_album_name">Album name</string>
    <string name="sortby_album_name_desc">Album name (desc)</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_length_desc">Length (desc)</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_date_desc">Date (desc)</string>
    <string name="sortby_number">Nb tracks</string>
    <string name="sortby_number_desc">Nb tracks (desc)</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="video_app_switch_title">Action on application switching</string>
    <string name="video_app_switch_summary">Select %1$s behavior when you switch to other application from video playback</string>
    <string name="play_pip_title">Play videos in Picture-in-picture mode</string>
    <string name="play_as_audio_background">Play videos in background</string>
    <string name="append">Append</string>
    <string name="insert_next">Insert next</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="last_playlist">Last playlist</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="confirm_delete_folder">Delete the folder \'%1$s\' and all its contents?</string>
    <string name="confirm_delete_playlist">Delete playlist \'%1$s\'?</string>
    <string name="ringtone_set">The file \'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">Don\'t show this message again.</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="unknown_number">Unknown number of Tracks</string>
    <string name="songs">Songs</string>
    <plurals name="songs_quantity">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <plurals name="albums_quantity">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="one">1 subfolder</item>
        <item quantity="other">%d subfolders</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="one">1 media file</item>
        <item quantity="other">%d media files</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="noplaylist">No playlist found.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="directorynotfound">The directory path \'%1$s\' was not found.</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle_title">Shuffle mode</string>
    <string name="shuffle">Shuffle Off</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="repeat_title">Repeat mode</string>
    <string name="repeat">Repeat none</string>
    <string name="repeat_single">Repeat single</string>
    <string name="repeat_all">Repeat all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="firstsong">First song of the playlist</string>
    <string name="lastsong">Last song of the playlist</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_screen">Fit screen</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitle track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_bitrate_info">Bitrate: %1$s/s\n</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
    <string name="track_language_info">Language: %1$s\n</string>
    <string name="volume">Volume</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="brightness">Brightness</string>
    <string name="navmenu">navigation menu</string>
    <string name="advanced">advanced options</string>
    <plurals name="track_channels_info_quantity">
        <item quantity="one">1 channel\n</item>
        <item quantity="other">%1$d channels\n</item>
    </plurals>
    <string name="track_samplerate_info">Sample rate: %1$d Hz\n</string>
    <string name="track_resolution_info">Resolution: %1$dx%2$d\n</string>
    <string name="track_framerate_info">Frame rate: %1$.3f\n</string>
    <string name="tools">Tools</string>
    <string name="playback_speed">Playback speed</string>
    <string name="sleep_title">Sleep timer</string>
    <string name="sleep_in">Sleep in</string>
    <string name="sleep_cancel">Cancel sleep timer</string>
    <string name="jump_to_time">Jump to Time</string>
    <string name="subtitle_label">Add subtitle file</string>
    <string name="subtitle_select">Select subtitle file</string>
    <string name="no_file_picker_found">No file picker was found on the system.</string>
    <string name="server_add_title">Add a new server to favorites</string>
    <string name="server_domain_hint">Server address (domain name or IP)</string>
    <string name="server_share_hint">Network share name (or IP address)</string>
    <string name="server_folder_hint">Folder path (optional)</string>
    <string name="server_username_hint">Username</string>
    <string name="server_servername_hint">Server name, for conveniency</string>
    <string name="server_port">Port: </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="search_results">Search results</string>
    <string name="search_no_result">No media found</string>
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_remove">Remove from favorites</string>
    <string name="favorites_edit">Edit</string>
    <string name="favorite_added">Saved to favorites</string>
    <string name="favorite_removed">Removed from favorites</string>
    <string name="open">Open</string>
    <string name="open_mrl">Stream</string>
    <string name="open_mrl_dialog_title">Open network stream</string>
    <string name="open_mrl_dialog_msg">Enter network address: e.g. http://, mms:// or rtsp://</string>
    <string name="error_not_compatible">Sorry, your device is currently not supported by this version of %1$s for Android™.</string>
    <string name="error_problem">Sorry, %1$s for Android had a problem loading and had to close.</string>
    <string name="error_message_is">The error message is (please mention this when debugging):\n</string>
    <string name="empty" translatable="false"></string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="speed_placeholder" translatable="false">1.00x</string>
    <string name="load_1_period" translatable="false">.</string>
    <string name="load_2_period" translatable="false">..</string>
    <string name="load_3_period" translatable="false">...</string>
    <string name="colon" translatable="false">:</string>
    <string name="plus" translatable="false">+</string>
    <string name="playback_speed_title">Save Playback Speed</string>
    <string name="playback_speed_summary">Remember the playback speed you set</string>
    <string name="about_text" translatable="false">%1$s %2$s is powered by <a href="https://www.appsgeyser.com/">AppsGeyser.com</a></string>
    <string name="enable_black_theme">Enable the black theme</string>
    <string name="enable_black_theme_summary">Change the interface colours for better comfort in low light environments.</string>
    <string name="daynight_title">DayNight mode</string>
    <string name="daynight_summary">Automatically switch to night mode at appropriate time</string>
    <string name="interface_prefs_screen">Interface</string>
    <string name="interface_secondary_display_category_title">Secondary display</string>
    <string name="interface_secondary_display_category_summary">Settings when secondary displays are connected (HDMI/Chromecast).</string>
    <string name="enable_clone_mode">Prefer clone</string>
    <string name="enable_clone_mode_summary">Clone the device screen without remote control.</string>
    <string name="set_locale">Set locale</string>
    <string name="set_locale_detail">Leave blank to reset</string>
    <string name="resume_playback_title">Resume playback after a call</string>
    <string name="resume_playback_summary">Stay in pause otherwise</string>
    <string name="tv_ui_title">Android TV interface</string>
    <string name="tv_ui_summary">Change UI to TV adapted theme</string>
</resources>