<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/button_search" />

    <org.videolan.vlc.gui.view.SwipeRefreshLayout
                android:id="@+id/swipeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/searchButton">
        <org.videolan.vlc.gui.view.AutoFitRecyclerView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:overScrollMode="never"

            android:layout_height="match_parent"
            android:padding="@dimen/default_margin"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideInset"
            android:numColumns="auto_fit"
            android:fastScrollEnabled="true"
            android:scrollbars="vertical"
            android:fadingEdge="none"
            android:stretchMode="none"
            android:gravity="center" />
    </org.videolan.vlc.gui.view.SwipeRefreshLayout>

    <LinearLayout
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/no_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:gravity="center"

            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_media_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/default_margin"
                android:gravity="center"
                android:maxWidth="600dp"
                android:text="@string/nomedia"
                android:textSize="20sp"
                />
            <ImageView
                android:gravity="center_horizontal"

                android:padding="@dimen/default_margin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/app_icon"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_flipper_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/loading"
                android:textSize="20sp" />

            <ViewFlipper
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:autoStart="true"
                android:flipInterval="1000" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/empty"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_1_period"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_2_period"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_3_period"
                    android:textSize="20sp" />
            </ViewFlipper>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/shadow_top" />
</RelativeLayout>
