<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:textSize="29sp" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/info"
                android:focusable="true"
                android:clickable="true"
                android:src="@drawable/app_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:textColorLink="#0000EE"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:autoLink="web"
            android:id="@+id/about_text"
            android:text="@string/about_text"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/main_link"
            android:textColorLink="#0000EE"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0.27"
            android:gravity="center"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>
